[tool.poetry]
name = "stagehand"
version = "0.1.0"
description = ""
authors = ["Eric Smaxwill <eric@smaxwill.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.1"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
